--- a/Multiprjct/src/Web/Views/Shared/_Layout.cshtml
+++ b/Multiprjct/src/Web/Views/Shared/_Layout.cshtml
@@ -38,6 +38,17 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Greetings">Greeting</a>
                         </li>
                     </ul>
+                    <ul class="navbar-nav flex-grow-3">
+                        <li class="nav-item">
+                             <a class="nav-link text-dark" asp-area="" asp-controller="Returntype" asp-action="ReturnText">Text</a>
+                        </li>
+                        <li class="nav-item">
+                             <a class="nav-link text-dark" asp-area="" asp-controller="Returntype" asp-action="ReturnJson">Json</a>
+                        </li>
+                        <li class="nav-item">
+                             <a class="nav-link text-dark" asp-area="" asp-controller="Returntype" asp-action="ReturnHtml">Html</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
