--- a/Multiprjct/src/Web/Views/Shared/_Layout.cshtml
+++ b/Multiprjct/src/Web/Views/Shared/_Layout.cshtml
@@ -37,18 +37,19 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Greetings">Greeting</a>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Returntypes
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Returntype" asp-action="ReturnText">Text</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Returntype" asp-action="ReturnJson">Json</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Returntype" asp-action="ReturnHtml">Html</a>
+
+                            </div>
+                        </li>
                     </ul>
-                    <ul class="navbar-nav flex-grow-3">
-                        <li class="nav-item">
-                             <a class="nav-link text-dark" asp-area="" asp-controller="Returntype" asp-action="ReturnText">Text</a>
-                        </li>
-                        <li class="nav-item">
-                             <a class="nav-link text-dark" asp-area="" asp-controller="Returntype" asp-action="ReturnJson">Json</a>
-                        </li>
-                        <li class="nav-item">
-                             <a class="nav-link text-dark" asp-area="" asp-controller="Returntype" asp-action="ReturnHtml">Html</a>
-                        </li>
-                    </ul>
+                    
                 </div>
             </div>
         </nav>
